--- a/style.css
+++ b/style.css
@@ -52,12 +52,59 @@ main {
 .brand-section hr {
   color: #aaaaaa25;
 }
-.brand-logos{
+.brand-logos {
   display: flex;
   justify-content: space-evenly;
 }
-.brand-logos img{
+.brand-logos img {
   width: 91px;
   height: 38px;
   margin: 40px 0;
+}
+.popular-collection {
+}
+.popular-collection h1 {
+  font-size: 28px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.collections {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  row-gap: 30px;
+  padding-bottom: 50px;
+}
+.collection {
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  padding: 15px;
+}
+.collection .title {
+  font-size: 28px;
+  font-weight: 400px;
+  padding: 15px 0 5px 0;
+}
+.collection .amount {
+  font-size: 24px;
+  font-weight: 400;
+}
+.rating span {
+  font-size: 14px;
+  font-weight: 700;
+  color: #5e6366;
+}
+.rating .fa-star {
+  font-size: 14px;
+}
+.fill {
+  color: #fb8200;
+}
+.empty {
+  color: #787885;
+}
+.collection .text {
+  font-size: 14px;
+  font-weight: 700;
+  color: #787885;
 }
